# Agentix

./: .dockerignore  ARCHITECTURE.md  CLAUDE.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  nightly-ci.yml  nightly-swebench-verified.yml  test.yml
agentix/: __init__.py  closure.py  dispatch.py  models.py  sio.py  trace.py
agentix/builder/: Dockerfile  __init__.py  bootstrap.sh  bundle-build.sh  flake.nix
agentix/cli/: __init__.py  _resolve.py  build.py  deploy.py  plugin.py
agentix/deployment/: __init__.py  _plugin.py  base.py  docker.py
agentix/dispatch/: __init__.py  bound.py  dispatcher.py  entry_points.py  shape.py
agentix/log/: __init__.py  _bridge.py
agentix/nix/: wrapper.nix.tmpl
agentix/provider/: __init__.py  _plugin.py  base.py
agentix/rollout/: __init__.py  pool.py
agentix/runtime/: PROTOCOL.md  __init__.py  builtins.py  client.py  codec.py  dump_frame.py  loader.py  models.py  rpc.py  server.py  worker.py
agentix/trace/: _bridge.py
agentix/utils/: __init__.py  context.py
docs/: DEVELOPMENT.md  architecture.md  cli.md  closure-protocol.md  deployment.mdx  development.mdx  docs.json  extend-runtime.mdx  index.md  index.mdx  integrate-agent.mdx  integrate-dataset.mdx  namespace.mdx  plugin-authors.mdx  quick-start.md  quickstart.mdx  run-rollouts.mdx
docs/concepts/: bundles.mdx  plugins.mdx  (+1 more)
examples/eval-cc-swe/: README.md  cc.py  ci_runner.py  default.nix  git_patch.py  pyproject.toml  runner.py  swe.py
examples/eval-tui/: DESIGN.md  README.md  pyproject.toml
examples/eval-tui/eval_tui/: __init__.py  _adapters.py  app.py  cli.py  demo.py  help.py  models.py
examples/eval-tui/eval_tui/views/: __init__.py  build.py  catalog.py  observability.py  overview.py  placeholder.py  rollouts.py  sandboxes.py
examples/eval-tui/tests/: test_app.py
examples/eval-web/: README.md  pyproject.toml
examples/eval-web/eval_web/: __init__.py  app.py  cli.py  run.py
examples/eval-web/eval_web/static/: index.html
examples/eval-web/tests/: test_app.py
examples/hello-world/: README.md  default.nix  hello_world.py  main.py  pyproject.toml
examples/run-abridge/: README.md  agent.py  main.py  pyproject.toml
examples/run-claude-code/: README.md  default.nix  main.py  pyproject.toml
examples/run-mini-swe-agent/: README.md  default.nix  main.py  pyproject.toml
examples/run-swe-rollouts/: README.md  main.py  pyproject.toml
plugins/abridge/: CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
plugins/abridge/agentix/bridge/: __init__.py  client.py  detection.py  mitm.py  proxy.py  storage.py
plugins/abridge/agentix/bridge/anthropic/: __init__.py  gateway.py  service.py  translate.py
plugins/abridge/agentix/bridge/clients/: __init__.py  _anthropic_transforms.py  _genai_span.py  anthropic.py  anthropic_from_openai.py  openai.py
plugins/abridge/agentix/bridge/oai/: __init__.py  gateway.py  service.py
plugins/abridge/agentix/bridge/transform/: __init__.py  anthropic.py
plugins/abridge/tests/: conftest.py  test_adapter_anthropic.py  test_anthropic_transform.py  test_bridged.py  test_detection.py  test_mitm.py  test_proxy_roundtrip.py  test_roundtrip.py  test_storage.py  test_tracing.py
plugins/agents/claude-code/: pyproject.toml
plugins/agents/claude-code/agentix/agents/claude_code/: __init__.py  default.nix
plugins/agents/claude-code/src/: __init__.py  agent.py
plugins/agents/mini-swe-agent/: pyproject.toml
plugins/agents/mini-swe-agent/src/: __init__.py  runner.py
plugins/agents/mini-swe-agent/tests/: test_mini_swe_agent.py
plugins/agents/qwen-code/: default.nix  pyproject.toml
plugins/agents/qwen-code/src/: __init__.py
plugins/agents/qwen-code/tests/: test_qwen_code.py
plugins/datasets/swe/: pyproject.toml
plugins/datasets/swe/agentix/datasets/swe/: __init__.py  default.nix
plugins/datasets/swebench/: pyproject.toml
plugins/datasets/swebench/src/: __init__.py  default.nix  env.py  score.py
plugins/deployments/apptainer/: README.md  pyproject.toml
plugins/deployments/apptainer/agentix/deployment/: apptainer.py
plugins/deployments/apptainer/agentix/provider/: apptainer.py
plugins/deployments/apptainer/tests/: test_apptainer_deployment.py
plugins/deployments/daytona/: README.md  pyproject.toml
plugins/deployments/daytona/agentix/deployment/: daytona.py
plugins/deployments/daytona/agentix/provider/: daytona.py
plugins/deployments/docker/: README.md  pyproject.toml
plugins/deployments/docker/agentix/deployment/: docker.py
plugins/deployments/docker/agentix/provider/: docker.py
plugins/deployments/e2b/: README.md  pyproject.toml
plugins/deployments/e2b/agentix/deployment/: e2b.py
plugins/deployments/e2b/agentix/provider/: e2b.py
plugins/runner/: README.md  pyproject.toml
plugins/runner/src/: __init__.py  cli.py  core.py
plugins/runner/tests/: test_runner.py
plugins/trace-otel/: README.md  pyproject.toml
plugins/trace-otel/agentix/utils/trace/: otel.py
plugins/trace-otel/tests/: test_otel_processor.py
tests/: _context_target.py  _user_app_target.py  _worker_target.py  conftest.py  smoke_docker.py  test_build_e2e.py  test_closure_protocol.py  test_docker_deployment.py  test_eval_cc_swe_env.py  test_models.py  test_namespace.py  test_namespace_dispatch.py  test_namespace_guard.py  test_namespace_protocol.py  test_namespace_roundtrip.py  test_namespace_unhandled_warning.py  test_plugin_axes.py  test_plugin_registry.py  test_public_exports.py  test_reliable_stream_overflow.py  test_request_handler.py  test_rl_substrate.py  test_rpc_protocol.py  test_runtime_builtins.py  test_sandbox_options.py  test_sio_namespace.py  test_sio_reliable_stream.py  test_stream_respawn_resets_dedup.py  test_swe_env.py  test_user_app_dispatch.py  test_worker_env.py  test_worker_subprocess.py
tests/closures/mock-agent/: default.nix  pyproject.toml
tests/closures/mock-agent/agentix_closures/mock_agent/: __init__.py
tests/closures/mock-dataset/: default.nix  pyproject.toml
tests/closures/mock-dataset/agentix_closures/mock_dataset/: __init__.py  _register.py
(+69 files in other folders)
