[project]
name = "agentixx"
version = "0.2.7"
description = "Sandboxed rollouts you call like typed Python (import as `agentix`)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agentiix" }]
urls = { Homepage = "https://github.com/Agentiix/Agentix" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    # Streams, bidi, and log subscription share one Socket.IO connection.
    # The same package is both client and server.
    "python-socketio[asyncio-client]>=5.11",
    # Wire codec — msgpack for all RPC frames + Socket.IO event payloads.
    # Cross-language, no base64 overhead, native bytes, extension types
    # for ndarray + pydantic models.
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pyright>=1.1.380",
]
[project.scripts]
# Dev-side CLI: `agentix build`.
# Subcommands live in `agentix.cli`. The CLI is intentionally thin —
# most logic is in the submodules so they can also be imported directly.
agentix = "agentix.cli:main"
# Runtime server entrypoint — the bundle image's Docker ENTRYPOINT.
agentix-server = "agentix.runtime.server:main"

# Deployment backends and runtime integrations ship in their own wheels.
# Runtime integrations are normal Python dependencies installed into the bundle.
#   pip install agentix-deployment-docker   # registers `local`
#   pip install agentix-deployment-daytona  # registers `daytona`
#   pip install agentix-deployment-e2b      # registers `e2b`
#   pip install agentix-runtime-basic       # registers `bash`, `files`

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentix"]
# `agentix build` ships Nix builder templates under `agentix/nix/`;
# hatchling includes non-.py files in packages automatically.

# ── monorepo workspace ────────────────────────────────────────────
# The core (`agentixx`, this file) plus the plugins under `plugins/*`
# form one uv workspace. `uv sync` installs every member editable into
# one venv — edit any file and it's live, no commit/push/publish.
#
# Dependency separation is preserved: each member keeps its own
# `pyproject.toml` + dependency list. The core never pulls a plugin's
# deps (e.g. `openai` stays in `agentix-bridge`).
#
# `examples/*` are deliberately NOT members — a cookbook example like
# `eval-cc-swe` drags in heavy deps (swebench, datasets, pandas) that
# don't belong in a core-dev venv. Each example is a standalone
# project that path-depends on the workspace (editable), so it still
# sees core edits live without a release step.
[tool.uv.workspace]
members = ["plugins/*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pyright]
# Strict mode is the goal; raise this gradually. Today's basic mode
# catches the obvious mistakes without drowning in advisory diagnostics.
#
# Scope: shipped library code only — the core (`agentix`) and the
# bridge plugin package. Tests and cookbook examples are intentionally
# NOT type-checked; they take liberties (loose `pickle.loads`, deep
# `None`-narrowing) that aren't worth fighting pyright over.
include = ["agentix", "plugins/abridge/agentix"]
exclude = ["**/__pycache__", "**/.venv", ".venv", "**/build"]
# `agentix` is a pkgutil namespace package — the core lives here, the
# bridge plugin contributes `agentix/bridge/` from `plugins/abridge/`.
# `extraPaths` lets pyright resolve `agentix.bridge.*` statically (it
# doesn't run `pkgutil.extend_path`).
extraPaths = ["plugins/abridge"]
typeCheckingMode = "basic"
# venv lives on local disk (the repo is on a slow FUSE mount); `.venv`
# is a symlink to it. pyright follows the symlink for third-party stubs.
venvPath = "."
venv = ".venv"
reportMissingImports = "error"
reportUndefinedVariable = "error"
reportGeneralTypeIssues = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
python_files = ["test_*.py"]
