[project]
name = "agentixx"
version = "0.2.7"
description = "The universal bridge between agents and environments (import as `agentix`)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agentiix" }]
urls = { Homepage = "https://github.com/Agentiix/Agentix" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    # Streams, bidi, and log subscription share one Socket.IO connection.
    # The same package is both client and server.
    "python-socketio[asyncio-client]>=5.11",
    # Wire codec — msgpack for all RPC frames + Socket.IO event payloads.
    # Cross-language, no base64 overhead, native bytes, extension types
    # for ndarray + pydantic models.
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1",
    "ruff>=0.6",
    "pyright>=1.1.380",
]
[project.scripts]
# Dev-side CLI: `agentix build`.
# Subcommands live in `agentix.cli`. The CLI is intentionally thin —
# most logic is in the submodules so they can also be imported directly.
agentix = "agentix.cli:main"
# Runtime server entrypoint — the bundle image's Docker ENTRYPOINT.
agentix-server = "agentix.runtime.server:main"

# Deployment backends, agents, datasets, and runtime integrations ship
# in their own wheels. Runtime integrations are normal Python dependencies
# installed into the bundle.
#   pip install agentix-deployment-docker   # registers `local`
#   pip install agentix-deployment-daytona  # registers `daytona`
#   pip install agentix-deployment-e2b      # registers `e2b`
#   pip install agentix-agent-claude-code   # provides `agentix.agents.claude_code`
#   pip install agentix-agent-mini-swe-agent  # provides `agentix.agents.mini_swe_agent`
#   pip install agentix-dataset-swe         # provides `agentix.plugins.datasets.swe`
#   pip install agentix-runtime-basic       # registers `bash`, `files`

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentix"]
# `agentix build` ships its in-container builder assets (Dockerfile,
# bundle-build.sh, flake.nix, flake.lock) under `agentix/builder/`;
# hatchling includes non-.py files in packages automatically.

# ── monorepo workspace ────────────────────────────────────────────
# The core (`agentixx`, this file) plus the plugins under `plugins/`
# form one uv workspace. `uv sync` installs every member editable into
# one venv — edit any file and it's live, no commit/push/publish.
#
# Dependency ownership is still explicit: each member keeps its own
# `pyproject.toml` + dependency list, so plugin deps stay attached to
# the plugin that needs them.
#
# `examples/*` are deliberately NOT members. Each example is a standalone
# project that path-depends on the workspace (editable), so it still
# sees core edits live without a release step.
[tool.uv.workspace]
members = [
    "plugins/abridge",
    "plugins/runtime-basic",
    "plugins/trace-otel",
    "plugins/agents/*",
    "plugins/datasets/*",
    "plugins/deployments/*",
]
# `examples/*` are standalone projects, not members — each has its own
# lock and path-depends on the workspace. Excluding them lets `uv lock`
# run inside an example without uv claiming it as a stray member.
exclude = ["examples/*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pyright]
# Strict mode is the goal; raise this gradually. Today's basic mode
# catches the obvious mistakes without drowning in advisory diagnostics.
#
# Scope: shipped library code only — the core (`agentix`) and the
# plugin packages. Tests and cookbook examples are intentionally
# NOT type-checked; they take liberties (loose `pickle.loads`, deep
# `None`-narrowing) that aren't worth fighting pyright over.
include = [
    "agentix",
    "plugins/abridge/agentix",
    "plugins/agents/claude-code/src",
    "plugins/agents/mini-swe-agent/src",
    "plugins/datasets/swebench/src",
    "plugins/deployments/docker/agentix",
    "plugins/deployments/daytona/agentix",
    "plugins/deployments/e2b/agentix",
    "plugins/runtime-basic/agentix",
    "plugins/trace-otel/agentix",
]
exclude = ["**/__pycache__", "**/.venv", ".venv", "**/build"]
# `agentix` is a pkgutil namespace package — the core lives here, the
# plugins contribute siblings: `agentix/bridge/` from `plugins/abridge/`,
# `agentix/deployment/<backend>.py` from each `plugins/deployments/*`,
# `agentix/agents/*`, `agentix/plugins/datasets/*`, and `agentix/{bash,files}/`
# from `plugins/runtime-basic/`. `extraPaths` lets pyright resolve those
# statically (it doesn't run `pkgutil.extend_path`).
extraPaths = [
    "plugins/abridge",
    "plugins/agents/claude-code/src",
    "plugins/agents/mini-swe-agent/src",
    "plugins/datasets/swebench/src",
    "plugins/deployments/docker",
    "plugins/deployments/daytona",
    "plugins/deployments/e2b",
    "plugins/runtime-basic",
    "plugins/trace-otel",
]
typeCheckingMode = "basic"
# venv lives on local disk (the repo is on a slow FUSE mount); `.venv`
# is a symlink to it. pyright follows the symlink for third-party stubs.
venvPath = "."
venv = ".venv"
reportMissingImports = "error"
reportUndefinedVariable = "error"
reportGeneralTypeIssues = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
python_files = ["test_*.py"]
# `e2e` tests build a real bundle image (need docker, take minutes).
# `addopts` excludes them by default — the `e2e` CI job runs them with
# `-m e2e`, which overrides this.
markers = ["e2e: builds a real bundle image — needs docker, slow"]
# Coverage runs against `agentix` and the plugin packages; the
# subprocess worker (`agentix/runtime/server/worker/process.py`) is
# tracked separately because it executes in a child process and the
# main pytest run cannot instrument it.
addopts = [
    "-m",
    "not e2e",
    "--cov=agentix",
    "--cov-report=term-missing",
]

[tool.coverage.run]
branch = true
parallel = true
# The subprocess worker boots into its own Python interpreter; without
# explicit subprocess support coverage shows it as 0% even though the
# subprocess tests do exercise it. Tracking it as a separate run keeps
# the main report honest.
omit = [
    "agentix/runtime/server/worker/process.py",
    "agentix/runtime/server/worker/__main__.py",
    "agentix/cli/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
