[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-cc-swe"
version = "0.2.0"
description = "Evaluate Claude Code on SWE-bench Verified via Agentix"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agentiix" }]
urls = { Homepage = "https://github.com/Agentiix/Agentix" }
dependencies = [
    "agentixx",
    "agentix-runtime-basic>=0.1.0",      # bash inside the sandbox
    "agentix-deployment-docker>=0.1.0",  # local-docker backend
    "agentix-bridge",                    # Anthropic↔OpenAI proxy across the sandbox boundary
    "openai>=1.40",                      # host-side: real provider call
    "swebench>=4.0",                     # upstream harness (used inside the sandbox)
    "datasets>=2",                       # host-side: load the Verified split
]

# This example is NOT a workspace member (its heavy deps would bloat
# the core-dev venv). It path-depends on the monorepo, editable — core
# / plugin edits are live here with no release step.
[tool.uv.sources]
agentixx = { path = "../..", editable = true }
agentix-bridge = { path = "../../plugins/abridge", editable = true }

[tool.hatch.build.targets.wheel]
only-include = ["cc.py", "swe.py", "runner.py"]
