[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello-world"
version = "0.1.0"
description = "Minimal Agentix bundle with a project Nix dependency"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "agentixx",
    "agentix-runtime-basic",
    "agentix-deployment-docker"
]

# Standalone project (see [tool.uv.workspace].exclude in the repo root)
# — path-depends on the monorepo, editable, no release step.
[tool.uv.sources]
agentixx = { path = "../..", editable = true }
agentix-runtime-basic = { path = "../../plugins/runtime-basic", editable = true }
agentix-deployment-docker = { path = "../../plugins/deployments/docker", editable = true }

[tool.agentix]
nix = "default.nix"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
