[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "run-abridge"
version = "0.1.0"
description = "Run an agent in an Agentix sandbox with abridge tunnelling its LLM calls back to the host"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "agentixx",
    "agentix-bridge",
    "agentix-provider-docker",
    "openai>=1.0",
]

[tool.uv.sources]
agentixx = { path = "../..", editable = true }
agentix-bridge = { path = "../../plugins/abridge", editable = true }
agentix-provider-docker = { path = "../../plugins/providers/docker", editable = true }

# `agent.py` runs *inside* the sandbox, so it ships in the bundle and must
# be importable there (resolved as `agent::solve`). `main.py` is the
# host-side entry point.
[tool.hatch.build.targets.wheel]
only-include = ["main.py", "agent.py"]
