[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "run-mini-swe-agent"
version = "0.1.0"
description = "Run mini-swe-agent in an Agentix sandbox via Python API"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "agentixx",
    "agentix-runtime-basic",
    "agentix-deployment-docker",
    "agentix-agent-mini-swe-agent",
]

[tool.uv.sources]
agentixx = { path = "../..", editable = true }
agentix-runtime-basic = { path = "../../plugins/runtime-basic", editable = true }
agentix-deployment-docker = { path = "../../plugins/deployments/docker", editable = true }
agentix-agent-mini-swe-agent = { path = "../../plugins/agents/mini-swe-agent", editable = true }

[tool.agentix]
nix = "default.nix"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
