[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "run-swe-rollouts"
version = "0.1.0"
description = "Batch SWE-bench rollouts on Agentix via agentix.runner"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agentiix" }]
urls = { Homepage = "https://github.com/Agentiix/Agentix" }
dependencies = [
    "agentixx",
    "agentix-runner>=0.1.0",             # batch rollout orchestration
    "agentix-runtime-basic>=0.1.0",      # bash inside the sandbox (patch extraction)
    "agentix-deployment-docker>=0.1.0",  # docker/podman backend
    "agentix-agent-claude-code>=0.1.0",  # sandbox-side Claude Code runner
    "agentix-dataset-swe>=0.1.0",        # sandbox-side SWE-bench evaluator
    "agentix-bridge",                    # Anthropic↔OpenAI proxy across the sandbox boundary
    "openai>=1.40",                      # host-side: real provider call
    "datasets>=2",                       # host-side: load the Verified split
]

# Not a workspace member (heavy deps would bloat the core-dev venv). It
# path-depends on the monorepo, editable — core/plugin edits are live here.
[tool.uv.sources]
agentixx = { path = "../..", editable = true }
agentix-runner = { path = "../../plugins/runner", editable = true }
agentix-bridge = { path = "../../plugins/abridge", editable = true }
agentix-deployment-docker = { path = "../../plugins/deployments/docker", editable = true }
agentix-agent-claude-code = { path = "../../plugins/agents/claude-code", editable = true }
agentix-dataset-swe = { path = "../../plugins/datasets/swebench", editable = true }
agentix-runtime-basic = { path = "../../plugins/runtime-basic", editable = true }

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
