[project]
name = "agentix-bridge"
version = "0.5.0"
description = "Sandbox HTTP tunnel + path-routed @on handlers for Agentix (import as `agentix.bridge`)"
requires-python = ">=3.11"
dependencies = [
    "agentixx",
    "fastapi>=0.115",
    # Plain `uvicorn`, not `uvicorn[standard]`: the tunnel is HTTP POST
    # only (no WebSocket), so we don't need `websockets` (and its
    # deprecation noise), `httptools`, `uvloop`, etc.
    "uvicorn>=0.30",
]

# Bundled clients each depend on the provider's SDK; users who only
# ship custom `@on` handlers don't need either. Pick what you actually
# use:
#   pip install agentix-bridge[openai]            # OpenAIClient + AnthropicFromOpenAIClient
#   pip install agentix-bridge[anthropic]         # AnthropicClient
#   pip install agentix-bridge[all]               # both
[project.optional-dependencies]
openai = ["openai>=1.50"]
anthropic = ["anthropic>=0.40"]
all = ["openai>=1.50", "anthropic>=0.40"]

# `agentixx` is the monorepo workspace root — used editable, never
# from PyPI. Core edits are live here with no release step.
[tool.uv.sources]
agentixx = { workspace = true }

[build-system]
requires = ["uv_build>=0.7,<0.9"]
build-backend = "uv_build"

# uv_build is uv's own backend — no extra build deps need to land in
# the nix sandbox at build time. We ship under the `agentix.bridge`
# namespace; tell uv_build where the module lives (the dist name
# `agentix-bridge` doesn't match the directory layout).
[tool.uv.build-backend]
module-name = "agentix.bridge"
module-root = ""
namespace = true

# ruff / pyright / pytest config is centralized in the workspace-root
# pyproject.toml — this member doesn't repeat it.
