[project]
name = "agentix-runner"
version = "0.1.0"
description = "Library-first batch rollout runner for Agentix"
requires-python = ">=3.11"
dependencies = [
    "agentixx",
]

[project.scripts]
agentix-run = "agentix.runner.cli:main"

[tool.uv.sources]
agentixx = { workspace = true }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "agentix.runner" = "src" }
packages = ["agentix.runner"]
