[project]
name = "agentix-trace-otel"
version = "0.1.0"
description = "OpenTelemetry exporter for agentix.utils.trace spans (any OTLP-compatible backend)"
requires-python = ">=3.11"
dependencies = [
    "agentixx",
    # `opentelemetry-sdk` brings in the API + SDK; the OTLP HTTP
    # exporter is gated behind its own extra so we don't pull in grpc
    # by default.
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.optional-dependencies]
grpc = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
]

[tool.uv.sources]
agentixx = { workspace = true }

[build-system]
requires = ["uv_build>=0.7,<0.9"]
build-backend = "uv_build"

# We ship a sibling module `agentix.utils.trace.otel` into the
# existing `agentix.utils.trace` package; tell uv_build about the
# namespace layout (this mirrors `agentix-bridge` and the deployment
# plugins).
[tool.uv.build-backend]
module-name = "agentix.utils.trace.otel"
module-root = ""
namespace = true
