[project]
name = "agentix-agent-claude-code"
version = "0.1.0"
description = "Claude Code agent integration for Agentix sandboxes"
requires-python = ">=3.11"
dependencies = [
    "agentixx",
]

[tool.uv.sources]
agentixx = { workspace = true }

[build-system]
requires = ["uv_build>=0.7,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "agentix.agents.claude_code"
module-root = ""
namespace = true

[project.entry-points."agentix.nix"]
claude-code = "agentix.agents.claude_code"
