[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentix-deployment-apptainer"
version = "0.1.0"
description = "Apptainer (Singularity) deployment backend for Agentix (registers the `apptainer` backend)"
requires-python = ">=3.11"
dependencies = [
    # Protocol + dataclasses (`SandboxProvider`, `Sandbox`, `SandboxConfig`,
    # `SandboxInfo`, `SandboxId`) all live in core agentix. The
    # backend's loopback health check uses raw asyncio sockets, so we
    # don't pull in httpx here — it would otherwise honor environment
    # proxy vars and hang the localhost probe on hosts behind a corp
    # proxy.
    "agentixx",
]

[tool.uv.sources]
agentixx = { workspace = true }

# `uv sync` makes `load_deployment("apptainer")` work with zero framework
# changes — the registry walks this entry-point group.
[project.entry-points."agentix.provider"]
apptainer = "agentix.provider.apptainer:ApptainerProvider"

[tool.hatch.build.targets.wheel]
# One file at `agentix/deployment/apptainer.py`. The `agentix` and
# `agentix/deployment` dirs carry no __init__.py here — those belong to
# core agentix; this wheel installs a sibling into the same namespace.
packages = ["agentix"]
