[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentix-deployment-daytona"
version = "0.1.2"
description = "Daytona deployment backend for Agentix (registers the `daytona` backend)"
requires-python = ">=3.11"
dependencies = [
    # Protocol + dataclasses all live in core agentix.
    "agentixx",
]

# `agentixx` is the monorepo workspace root — used editable, never from
# PyPI. Core edits are live here with no release step.
[tool.uv.sources]
agentixx = { workspace = true }

# `uv sync` makes `load_deployment("daytona")` work with zero framework
# changes — the registry walks this entry-point group.
[project.entry-points."agentix.provider"]
daytona = "agentix.provider.daytona:DaytonaProvider"

[tool.hatch.build.targets.wheel]
# One file at `agentix/deployment/daytona.py`; the namespace dirs carry
# no __init__.py here — those belong to core agentix.
packages = ["agentix"]

# ruff / pyright / pytest config is centralized in the workspace-root
# pyproject.toml — this member doesn't repeat it.
