[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentix-deployment-docker"
version = "0.1.4"
description = "Docker deployment backend for Agentix (registers the `local` backend)"
requires-python = ">=3.11"
dependencies = [
    # Protocol + dataclasses (`Deployment`, `Sandbox`, `SandboxConfig`,
    # `SandboxInfo`, `SandboxId`) all live in core agentix.
    "agentixx",
    # The backend talks to dockerd over a unix socket via httpx.
    "httpx>=0.27",
]

# `agentixx` is the monorepo workspace root — used editable, never from
# PyPI. Core edits are live here with no release step.
[tool.uv.sources]
agentixx = { workspace = true }

# `uv sync` makes `load_deployment("local")` work with zero framework
# changes — the registry walks this entry-point group.
[project.entry-points."agentix.deployment"]
local = "agentix.deployment.docker:DockerDeployment"

[tool.hatch.build.targets.wheel]
# One file at `agentix/deployment/docker.py`. The `agentix` and
# `agentix/deployment` dirs carry no __init__.py here — those belong to
# core agentix; this wheel installs a sibling into the same namespace.
packages = ["agentix"]

# ruff / pyright / pytest config is centralized in the workspace-root
# pyproject.toml — this member doesn't repeat it.
