[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentix-deployment-e2b"
version = "0.1.2"
description = "E2B deployment backend for Agentix (registers the `e2b` backend)"
requires-python = ">=3.11"
dependencies = [
    # Protocol + dataclasses all live in core agentix.
    "agentixx",
]

# `agentixx` is the monorepo workspace root — used editable, never from
# PyPI. Core edits are live here with no release step.
[tool.uv.sources]
agentixx = { workspace = true }

# `uv sync` makes `load_deployment("e2b")` work with zero framework
# changes — the registry walks this entry-point group.
[project.entry-points."agentix.provider"]
e2b = "agentix.provider.e2b:E2BProvider"

[tool.hatch.build.targets.wheel]
# One file at `agentix/deployment/e2b.py`; the namespace dirs carry no
# __init__.py here — those belong to core agentix.
packages = ["agentix"]

# ruff / pyright / pytest config is centralized in the workspace-root
# pyproject.toml — this member doesn't repeat it.
