[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentix-closure-mock-agent"
version = "0.1.0"
description = "Mock agent closure used in Agentix tests"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["agentix_closures/mock_agent"]
